day8/backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backenddeployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shreyad01/webapp2-image_v2:latest
        ports:
        - containerPort: 80
