day8/frontenddeoployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontenddeployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shreyad01/webapp-image:latest
        ports:
        - containerPort: 80
